  template.  This paster template sets up a BFG project that uses
  SQAlchemy (with SQLite) and uses traversal to resolve URLs.  (no
  Routes areused).  This template can be used via ``paster create -t
  bfg_alchemy``.

- The Routes ``Route`` object used to resolve the match is now put
  into the environment as ``bfg.route`` when URL dispatch is used.

0.8a6 (2009-05-11)
==================

Features
--------

- Added a ``routesalchemy`` Paster template.  This paster template
  sets up a BFG project that uses SQAlchemy (with SQLite) and uses
  Routes exclusively to resolve URLs (no traversal root factory is
  used).  This template can be used via ``paster create -t
  bfg_routesalchemy``.

Documentation
-------------

- Added documentation to the URL Dispatch chapter about how to catch
  the root URL using a ZCML ``route`` directive.

- Added documentation to the URL Dispatch chapter about how to perform
  a cleanup function at the end of a request (e.g. close the SQL
  connection).

Bug Fixes
---------

- In version 0.6.3, passing a ``get_root`` callback (a "root factory")
  to ``repoze.bfg.router.make_app`` became optional if any ``route``
  declaration was made in ZCML.  The intent was to make it possible to
  disuse traversal entirely, instead relying entirely on URL dispatch
  (Routes) to resolve all contexts.  However a compound set of bugs
  prevented usage of a Routes-based root view (a view which responds
  to "/").  One bug existed in `repoze.bfg.urldispatch``, another
  existed in Routes itself.

  To resolve this issue, the urldispatch module was fixed, and a fork
  of the Routes trunk was put into the "dev" index named
  ``Routes-1.11dev-chrism-home``.  The source for the fork exists at
  `http://bitbucket.org/chrism/routes-home/
  <http://bitbucket.org/chrism/routes-home/>`_; its contents have been
  merged into the Routes trunk (what will be Routes 1.11).

0.8a5 (2009-05-08)
==================

Features
--------

- Two new security policies were added: